# styde

./: .gitignore  GIT_WORKFLOW.md  MASTER_PLAN_FINAL.md  PROMPT_ONBOARD_TEAM.md  PROMPT_REORG_01_AGY.md  README.md  TOTAL REBOOT — styde.ai.md  Untitled 1.md  Untitled.md  self_eval_response.txt  skills-lock.json  test_command_center.py  test_command_center_final.py
.agents/: AGENTS.md  skills.json
.obsidian/: workspace.json
Alpedal/: Hermes_Forge_Phase0  PHASE0_COMPLETE.md
OBSIDIAN/: INDEX.md  SYSTEM_DOCUMENT.md  _RULES.md
OBSIDIAN/00_STRATEGY/: BUSINESS_CONCEPT.md  MARKET.md
OBSIDIAN/01_PLAN/: BUILD_PHASE_2.md  REORG_01.md  ROADMAP.md
OBSIDIAN/01_plan/: SPRINT_CURRENT.md
OBSIDIAN/02_ARCHITECTURE/: AGENT_FRAMEWORK.md  DASHBOARD_SPEC.md  SERVER_SETUP.md  SYSTEM_OVERVIEW.md
OBSIDIAN/05_OPS/: ONBOARDING.md  SUBSCRIPTION_TIERS.md
OBSIDIAN/99_REFERENCES/: LINKS.md
OBSIDIAN/_TEMPLATES/: _README.md
OBSIDIAN/_USERS/: alpedal.md  elb.md  william.md
OBSIDIAN/_archive/: SYSTEM_DOCUMENT.md
PLAN ALTERNATIVE/: 2026-06-25-styde-hund-mvp.md  styde-hund-design.md
StydeAgents/: README.md
StydeAgents/blueprints/: _INDEX.md
StydeAgents/deployed/: _README.md
StydeAgents/internal/: _README.md  consultant-agent.md
_alpedal/: README.md  alpedal_PLAN.md
_alpedal/styde-forge/Dashboard/src-tauri/: Cargo.toml  tauri.conf.json
_alpedal/styde-forge/Dashboard/src-tauri/src/: main.rs
_william/: DASHBOARD_SPEC.md  README.md  WILLIAM;PLAN.md
agent-blueprints/: README.md
obsidian/: Untitled.md  _RULES.md
skills/: SKILLS_INDEX.md  _README.md
(+15034 files in other folders)
